test_regress/t/t_display_type_bad.out
%Error: t/t_display_type_bad.v:11:29: $display-line format of '%d' illegal with string argument
                                    : ... note: In instance 't'
                                    : ... Suggest use '%s'
   11 |     $display("%d %x %f %t", s, s, s, s);
      |                             ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_display_type_bad.v:11:32: $display-line format of '%x' illegal with string argument
                                    : ... note: In instance 't'
                                    : ... Suggest use '%s'
   11 |     $display("%d %x %f %t", s, s, s, s);
      |                                ^
%Error: t/t_display_type_bad.v:11:35: $display-line format of '%f' illegal with string argument
                                    : ... note: In instance 't'
                                    : ... Suggest use '%s'
   11 |     $display("%d %x %f %t", s, s, s, s);
      |                                   ^
%Error: t/t_display_type_bad.v:11:38: $display-line format of '%t' illegal with string argument
                                    : ... note: In instance 't'
                                    : ... Suggest use '%s'
   11 |     $display("%d %x %f %t", s, s, s, s);
      |                                      ^
%Error: Exiting due to
